--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 
 <body>
     <h1>Hello</h1>
-    <script type="module" src="./js/task-1.js"></script>
-    <script type="module" src="./js/task-2.js"></script>
-    <script type="module" src="./js/task-3.js"></script>
-    <script type="module" src="./js/task-4.js"></script>
+    <script type="module" src="./js/task-1.js" defer></script>
+    <script type="module" src="./js/task-2.js" defer></script>
+    <script type="module" src="./js/task-3.js" defer></script>
+    <script type="module" src="./js/task-4.js" defer></script>
 </body>
 
 </html>
